# RAG_POC

./: .gitignore  README.md  pyproject.toml
knowledge_base/: agb_regeln.txt  aktuelles.txt  bank_daten.csv  historie.txt
scripts/: agb_generator.py  knowledge_indexer.py  rag_demo.py  synt_data_generator.py
