[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0", 
    "huggingface-hub>=0.20.0",
    "torch>=2.2.0,<2.6.0",  
    "transformers>=4.38.0,<4.45.0", 
    "optimum>=1.16.0",
    "optimum-intel[openvino]>=1.15.0",
    "openvino>=2024.0.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-huggingface>=0.0.1",
    "langchain-chroma>=0.1.0",
    "bitsandbytes>=0.41.0", 
]